@@ -2,6 +2,7 @@ package cs.up.ac.za.blogsome.controller;
 
 import blogsome.api.ReplyApi;
 import blogsome.model.Comments;
+import blogsome.model.Reply;
 import java.util.Arrays;
 import java.util.List;
 import org.springframework.http.HttpStatus;
@@ -14,12 +15,12 @@ import org.springframework.web.bind.annotation.RestController;
 public class ReplyController implements ReplyApi {
 
   @Override
-  public ResponseEntity<String> postReply(final Integer commentId, final Comments comments) {
-    return ResponseEntity.status(HttpStatus.OK).body(new String());
+  public ResponseEntity<String> postReply(final Integer commentId, final Reply reply) {
+    return ReplyApi.super.postReply(commentId, reply);
   }
 
   @Override
   public ResponseEntity<List<Comments>> viewReply(final Integer commentId) {
-    return ResponseEntity.status(HttpStatus.OK).body(Arrays.asList(new Comments()));
+    return ResponseEntity.status(HttpStatus.OK).body(List.of(new Comments()));
   }
 }
